fix: styles on the cards that make an overflow on the shop

--- a/src/components/CardView/CardView.css
+++ b/src/components/CardView/CardView.css
@@ -1,8 +1,11 @@
 .cards-container {
 	display: grid;
-	place-content: center;
+	justify-content: center;
+	align-items: flex-start;
 	width: 100%;
-	grid-template-columns: repeat(auto-fit, 15em);
+	height: fit-content;
+	grid-template-columns: repeat(auto-fit, 16em);
 	gap: 1.5em;
-	margin: 1em;
+	row-gap: 2em;
+	padding: 1em;
 }
